--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
@@ -26,13 +26,9 @@ App WEB  [Profesor]
 				<h1 class ="sectionTitle">Cronograma del estudiante</h1>
 				<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
 
-
-				<a href="" class = "button"><img src="{{ asset('img/aprobarCronogramaProfe.png') }}"/><h4>Aprobar Cronograma</h4></a>
+				{% if cronograma.count > 0 %}
+				<a href="{{ path('ingenieria_profesor_aprobarcronograma' , { 'id': estudiante.id}) }}" class = "button"><img src="{{ asset('img/aprobarCronogramaProfe.png') }}"/><h4>Aprobar Cronograma</h4></a>
 				<a href="" class = "button"><img src="{{ asset('img/rechazarCronogramaProfe.png') }}"/><h4>Rechazar Cronograma</h4></a>
-
-				{% if (estudiante.aprobadoCronograma == false) and (msgerr.id == '1') %}
-
-				<a href="{{ path('ingenieria_profesor_aprobarcronograma' , { 'id': estudiante.id}) }}" class = "button"><img src="{{ asset('img/listo.png') }}"/><h4>Aprobar</h4></a>
 				{% endif %}
 		</div>
 		{% endblock  %}
