--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
@@ -25,10 +25,11 @@ App WEB  [Profesor]
 		<div class = "upSection">  
 				<h1 class ="sectionTitle">Cronograma del estudiante</h1>
 				<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Regresar</h4></a>
-
-				{% if cronograma.count > 0 %}
-				<a href="{{ path('ingenieria_profesor_aprobarcronograma' , { 'id': estudiante.id}) }}" class = "button"><img src="{{ asset('img/aprobarCronogramaProfe.png') }}"/><h4>Aprobar Cronograma</h4></a>
-				<a href="" class = "button"><img src="{{ asset('img/rechazarCronogramaProfe.png') }}"/><h4>Rechazar Cronograma</h4></a>
+				{% if estudiante.aprobadoCronograma == false %}
+					{% if cronograma.count > 0 %}
+					<a href="{{ path('ingenieria_profesor_aprobarcronograma' , { 'id': estudiante.id}) }}" class = "button"><img src="{{ asset('img/aprobarCronogramaProfe.png') }}"/><h4>Aprobar Cronograma</h4></a>
+					<a href="{{ path('ingenieria_profesor_rechazarcronograma' , { 'id': estudiante.id}) }}" class = "button"><img src="{{ asset('img/rechazarCronogramaProfe.png') }}"/><h4>Rechazar Cronograma</h4></a>
+					{% endif %}
 				{% endif %}
 		</div>
 		{% endblock  %}
