--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
@@ -19,7 +19,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 		{% block upSection  %}
 		<div class = "upSection">
 			<h1 class ="sectionTitle">Actividades</h1>
-			<a href="{{ path('ingenieria_profesor_registraractividad') }}"  class = "button"><img src="{{ asset('img/externosBoton.png') }}"/><h4>Nueva actividad</h4></a>
+			<a href="{{ path('ingenieria_profesor_registraractividad') }}"  class = "button"><img src="{{ asset('img/anadirActividad.png') }}"/><h4>Nueva actividad</h4></a>
 		</div>
 		{% endblock  %}
 
