--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/avisonoinscripto.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/avisonoinscripto.html.twig
@@ -6,9 +6,10 @@ Aplicación WEB  [Estudiante]
 
 {% block js  %}
 <script>
-$( "#cronograma" ).css("background-color","#000");
-$( "#cronograma img" ).css("opacity","0.4");
-$( "#cronograma h3" ).css("opacity","0.4");
+/*
+$( "#actividad" ).css("background-color","#000");
+$( "#actividad img" ).css("opacity","0.4");
+$( "#actividad h3" ).css("opacity","0.4");*/
 </script>
 
 {% endblock %}
