--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
@@ -46,7 +46,7 @@ Aplicación WEB  [Estudiante]
 							</div>
 
 							<div style="position:relative; float:right;">
-								<input style="padding-left:38px;"  class="button" value="Enviar Cronograma" id="btnenviar" name="enviarCronograma"  type="button">
+								<input style="padding-left:38px;"  class="button" value="Notificar Cronograma" id="btnenviar" name="enviarCronograma"  type="button">
 								<img style="pointer-events:none; position:absolute; top:-3px; left:13px;" src="/complementaria/web/img/enviarCronograma.png"/>
 								</input>
 							</div>
@@ -55,8 +55,8 @@ Aplicación WEB  [Estudiante]
 					{% endif %}
 
 					<div style="position:relative; float:right;">
-						<input style="padding-left:38px;"  class="button" value="listo" id="btnsubir" name="listo"  type="button">
-						<img style="pointer-events:none; position:absolute; top:0; left:13px;" src="/complementaria/web/img/listo.png"/>
+						<input style="padding-left:38px;"  class="button" value="Agregar Actividad" id="btnsubir" name="listo"  type="button">
+						<img style="pointer-events:none; position:absolute; top:0; left:13px;" src="/complementaria/web/img/anadirActividad.png"/>
 						</input>
 					</div>
 					<input style=" float:right" type="text" name="fecha" id="cronograma_fechaIniciacion">
