--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/actividades.html.twig
@@ -39,7 +39,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 						<th style=" width:40%"></th> 
 						<th><!--<img src="{{ asset('img/mailLabel.png') }}"/>--></th>
 						<th></th>
-						<th><h2># Cupos</h2></th>
+						<th ><img style="float:left"src="{{ asset('img/numeroVacantes.png') }}"/><h2 style="margin-top:7px;">Vacantes</h2></th>
 					</tr> <!--tablehead -->
 				</tbody>
 			</table><!-- practicantes tableHead -->
