--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/cronograma.html.twig
@@ -47,7 +47,7 @@ $( "#actividades h3" ).css("opacity","0.4");
 		<div class = "downSection"> 
 		{% if msgerr.id == '1' %}
 			<div id = "error">¡El estudiante no ha subido el cronograma de actividades!</div>		
-			<a href="javascript:history.back()" class = "button"><img src="{{ asset('img/regresar.png') }}"/><h4>Enviar email</h4></a>
+			<a href="javascript:history.back()" class = "button"><img style="top:12px;"  src="{{ asset('img/enviarCorreo.png') }}"/><h4>Enviar email</h4></a>
 		{% else %}
 			<table class = "generalTableHead">
 				<tbody>
