Error fallback messages stylized

--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
@@ -20,7 +20,7 @@ Aplicación WEB  [Profesor]
 		<div class = "downSection">
 
 		{% if msgerr.id == '1' %}
-			<div id = "error">No hay actividades complementarias ofertadas!</div>		
+			<div id = "error"><img src="/complementaria/web/img/error.png"/>No hay actividades complementarias ofertadas!</div>		
 		{% else %}
 			
 			<table class = "generalTableHead">
