--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/cronograma.html.twig
@@ -105,7 +105,7 @@ Aplicación WEB  [Estudiante]
 	</table>
 
 	{% if cronograma.count == 0 %}
-	<div id = "error">{{ msgerr.descripcion }}</div>	
+	<div id = "error"><img src="/complementaria/web/img/error.png"/>{{ msgerr.descripcion }}</div>	
 	{% endif %}
 	
 
