--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/infoactividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/infoactividad.html.twig
@@ -6,9 +6,9 @@ Aplicación WEB  [Estudiante]
 
 {% block js  %}
 <script>
-$( "#actividad" ).css("background-color","#000");
+/*$( "#actividad" ).css("background-color","#000");
 $( "#actividad img" ).css("opacity","0.4");
-$( "#actividad h3" ).css("opacity","0.4");
+$( "#actividad h3" ).css("opacity","0.4");*/
 </script>
 {% endblock %}
 
