--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/actividades.html.twig
@@ -23,7 +23,6 @@ $( "#actividades h3" ).css("opacity","0.4");
 
 		{% block downSection  %}
 		<div class = "downSection">
-
 		{% if msgerr.id == '1' %}
 			<div id = "error">{{ msgerr.descripcion }}</div>		
 		{% else %}
@@ -31,10 +30,10 @@ $( "#actividades h3" ).css("opacity","0.4");
 			<table class = "generalTableHead">
 				<tbody>
 					<tr class="tableHead">
-						<th style=" width:45%"></th> 
-						<th></th>
-						<th style="width:5%; color: white;"># Cupos</th>
-						
+						<th style=" width:73%"></th> 
+						<th><img src="{{ asset('img/practicanteIcon.png') }}"/></th>
+						<th style=" width:9%"></th> 
+						<th><img src="{{ asset('img/numeroVacantes.png') }}"/></th> 
 					</tr> <!--tablehead -->
 				</tbody>
 			</table><!-- practicantes tableHead -->
@@ -43,7 +42,6 @@ $( "#actividades h3" ).css("opacity","0.4");
 		
 				<table class = "generalTable">
 				<tbody>
-			
 					{% set id = 1 %}
 					<tr class="spacer"></tr>
 					{% for actividad in listaActividades %}
@@ -78,7 +76,6 @@ $( "#actividades h3" ).css("opacity","0.4");
 			</div><!-- downSection -->
 		{% endif %}
 		{% endblock %}
-
 </div>
 
 <script>
@@ -108,4 +105,3 @@ $( ".tableItem" ).mouseenter(function() {
 	});
 </script>
 {% endblock %}
-
