--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/error.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/error.html.twig
@@ -1,5 +1,9 @@
 {% extends 'IngenieriaUsuarioBundle::layout.html.twig' %}
 
+{% block programa %}
+Aplicación WEB - [Administrador]
+{% endblock %}
+
 {% block js  %}
 	<script>
 	$( "#cronograma" ).css("background-color","#000");
