--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/actividades.html.twig
@@ -1,16 +1,20 @@
-{% extends 'IngenieriaEstudianteBundle::layout.html.twig' %}
+{% extends '::base.html.twig' %}
 
-{% block programa %}
-Aplicación WEB  [Estudiante]
+{% block title %} Panel Principal:: Actividad complementaria UAO{% endblock %}
+
+{% block stylesheets %}
+{{ parent() }}	
 {% endblock %}
 
 {% block js  %}
-<script>
-$( "#actividad" ).css("background-color","#000");
-$( "#actividad img" ).css("opacity","0.4");
-$( "#actividad h3" ).css("opacity","0.4");
-</script>
 {% endblock %}
+
+{% block body %}
+{{ parent() }}
+{% endblock %}
+
+{% block sideBarMenu %}
+{% endblock  %}
 
 {% block content  %}
 {{ parent() }}
