--- a/src/Ingenieria/EstudianteBundle/Resources/views/Default/infoactividad.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/Default/infoactividad.html.twig
@@ -6,9 +6,9 @@ Aplicación WEB  [Estudiante]
 
 {% block js  %}
 <script>
-/*$( "#actividad" ).css("background-color","#000");
+$( "#actividad" ).css("background-color","#000");
 $( "#actividad img" ).css("opacity","0.4");
-$( "#actividad h3" ).css("opacity","0.4");*/
+$( "#actividad h3" ).css("opacity","0.4");
 </script>
 {% endblock %}
 
@@ -27,49 +27,62 @@ $( "#actividad h3" ).css("opacity","0.4");*/
 	<div class = "downSection"> 
 		<div class="profileContainer">
 			
-			<div class="profileFormContainer" style="height:580px;">
+			<div class="profileFormContainer" style="height:700px;">
 			<form action="" method="post">
-				<div class="inputContainer">
-					<h2>Actividad</h2>
-					<div class="input nomodificable">
-					<input type="text" value = "{{ actividad.nombre }}" readonly class = "largo">
-					</div>
-				</div>
 
-				<div class="inputContainer">	
-					<h2>Categoría</h2>
-					<div class="input nomodificable">
-					<input type="text" value = "{{ actividad.categoria.nombre }}" readonly>
-					</div>
-				</div>
 
 				<div class="inputContainer">
-					<h2>Descripción</h2>
+					<h2 style="width: 96px;">Mentor:</h2>
 					<div class="input nomodificable">
-					<textarea style="border:none !important; font-family:helvetica; margin-top:15px;" cols="40" rows="10" readonly>{{ actividad.descripcion }}</textarea>
+					<input type="text" value = "{{ actividad.mentor }}" readonly style="width: 450px;">
 					</div>
 				</div>
-
-
-				<div class="inputContainer">	
-					<h2>Profesor</h2>
+					
+				<div class="inputContainer">
+					<h2 style="width: 96px;">Email:</h2>
 					<div class="input nomodificable">
-					<input type="text" value	 = "{{ actividad.profesor.getNombreCompleto }}" readonly>
+					<input type="text" value = "{{ actividad.email }}" readonly style="width: 450px;">
 					</div>
 				</div>
 				
-				<div class="inputContainer">	
-					<h2>Recurso digital</h2>
+				<div class="inputContainer">
+					<h2 style="width: 96px;">Nombre de la actividad:</h2>
 					<div class="input nomodificable">
-					<a href = "http://{{ actividad.url }}" target="_blank">{{ actividad.url }}</a>
+					<input type="text" value = "{{ actividad.nombre }}" readonly style="width: 450px;">
+					</div>
+				</div>
+
+			    <div class="inputContainer">
+					<h2 style="width: 96px;">Propósito:</h2>
+					<div class="input nomodificable">
+					<input type="text" value = "{{ actividad.proposito }}" readonly style="width: 450px;">
+					</div>
+				</div>
+
+			    <div class="inputContainer">
+					<h2 style="width: 96px;">Dirigida:</h2>
+					<div class="input nomodificable">
+					<input type="text" value = "{{ actividad.dirigida }}" readonly style="width: 450px;">
+					</div>
+				</div>
+				
+				<div class="inputContainer">
+					<h2 style="width: 96px;">Descripción:</h2>
+					<div class="input nomodificable">
+					<input type="text" value = "{{ actividad.descripcion }}" readonly style="width: 450px;">
+					</div>
+				</div>
+				
+				<div class="inputContainer">
+					<h2 style="width: 96px;">URL:</h2>
+					<div class="input nomodificable">
+					<input type="text" value = "{{ actividad.url }}" readonly style="width: 450px;">
 					</div>
 				</div>
 			</form>
-			
 			</div><!--profileFormContainer -->	
 		</div><!--profileContainer -->	
 	</div><!--donwsection -->
-
 	{% endblock %}
 </div><!-- content -->
 {% endblock %}
