add view tutor to students

--- a/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
@@ -23,6 +23,11 @@
 		<img id="externoIcon" src="{{ asset('img/actividad.png') }}">
 		<h3>Actividad</h3>
 	</a>
+	
+	<a href="{{ path('ingenieria_estudiante_tutor') }}" class="menubutton"  id="actividad">
+		<img id="externoIcon" src="{{ asset('img/internoIcon.png') }}">
+		<h3>Tutor</h3>
+	</a>
 </div>
 {% endblock  %}
 
