--- a/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/EstudianteBundle/Resources/views/layout.html.twig
@@ -24,7 +24,7 @@
 		<h3>Actividad</h3>
 	</a>
 	
-	<a href="{{ path('ingenieria_estudiante_tutor') }}" class="menubutton"  id="actividad">
+	<a href="{{ path('ingenieria_estudiante_tutor') }}" class="menubutton"  id="tutor">
 		<img id="externoIcon" src="{{ asset('img/internoIcon.png') }}">
 		<h3>Tutor</h3>
 	</a>
