--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
@@ -47,9 +47,9 @@ $( "#directores h3" ).css("opacity","0.4");
 									<tr class="tableItem">
 										<td id="hoverDiv">
 										<td><h2>{{ id }}</h2></td>
-											<td style=" width:20%"><span style="margin-left:20px; ">{{ grupo.nombre }}</span></td>
+											<td style=" width:20%"><span style="margin-left:20px; "><a href="{{ path('usuario_estudiantes_grupo', { 'id': grupo.id }) }}">{{ grupo.nombre }}</a></span></td>
 											{% if grupo.tutor %}											
-											<td style=" width:20%"><span style="margin-left:20px; ">{{ grupo.tutor.nombres }}</span></td>
+											<td style=" width:20%"><span style="margin-left:20px; ">{{ grupo.tutor.nombres }} {{ grupo.tutor.apellidos }}</span></td>
 {% else %}
 <td style=" width:20%"><span style="margin-left:20px; ">Sin asignar</span></td>
 {% endif %}
@@ -60,13 +60,15 @@ $( "#directores h3" ).css("opacity","0.4");
 												<div>
 													<table class="opciones">
 													<td>
-														<a href="{{ path('usuario_actualizar_grupo', { 'id': grupo.id}) }}"><img src="{{ asset('img/editar.png') }}">
+														<a href="{{ path('usuario_actualizar_grupo', { 'id': grupo.id}) }}">
+														<img src="{{ asset('img/editar.png') }}">
 														<h3> Editar </h3>
 														</a>
 													</td>
 													<td style ="width: 90px;">
-														<a href="{{ path('usuario_eliminar_grupo', { 'id': grupo.id}) }}"><img src="{{ asset('img/editar.png') }}">
-														<h3>Eliminar</h3>
+														<a href="{{ path('usuario_eliminar_grupo', { 'id': grupo.id}) }}">
+														<img src="{{ asset('img/editar.png') }}">
+														<h3> Eliminar </h3>
 														</a>
 													</td>	
 													</table> <!-- opciones -->
