--- a/web/css/contentStyle.css
+++ b/web/css/contentStyle.css
@@ -640,6 +640,6 @@
 }
 
 /* line 599, psass/sass/contentStyle.scss */
-#cronograma_fechaIniciacion {
-  width: 80px;
+.cronograma_input {
+  width: 80px !important;
 }
