use case bitacora tutor advanced

--- a/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantes.html.twig
+++ b/src/Ingenieria/ProfesorBundle/Resources/views/Default/estudiantes.html.twig
@@ -64,7 +64,7 @@ $( "#estudiantes h3" ).css("opacity","0.4");
 							<td style=" width:1%"></td>
 							<td>
 								<table class="opciones" style="right:129px">
-									<td style="width: 120px;"><a href="{{ path('ingenieria_profesor_cronograma' , { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" ><h3> Cronograma </h3></a>
+									<td style="width: 120px;"><a href="{{ path('ingenieria_profesor_bitacora' , { 'id': estudiante.id}) }}"><img src="{{ asset('img/cronograma.png') }}" ><h3>Bitacora</h3></a>
 									</td>
 								</table>
 							</td>
