--- a/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/Default/grupos.html.twig
@@ -30,9 +30,10 @@ $( "#directores h3" ).css("opacity","0.4");
 					<table class="generalTableHead">
 						<tbody>
 							<tr class="tableHead">
-								<th width="35%"></th>
+								<th width="40%"></th>
 								<th width="28%"><img style="margin-left:28%;" src="{{ asset('img/idLabel.png') }}"/></th>	
-								<th width="17%"></th>
+								<th width="20%"></th>
+								<th width="15%"><img style="margin-left:28%;" src="{{ asset('img/numeroVacantes.png') }}"/></th>	
 								
 								<th><h3><span></span></h3></th>
 							</tr><!--tablehead -->
@@ -47,33 +48,31 @@ $( "#directores h3" ).css("opacity","0.4");
 									<tr class="tableItem">
 										<td id="hoverDiv">
 										<td><h2>{{ id }}</h2></td>
-											<td style=" width:20%"><span style="margin-left:20px; "><a href="{{ path('usuario_estudiantes_grupo', { 'id': grupo.id }) }}">{{ grupo.nombre }}</a></span></td>
+											<td style=" width:30%"><span style="margin-left:20px; "><a href="{{ path('usuario_estudiantes_grupo', { 'id': grupo.id }) }}">{{ grupo.nombre }}</a></span></td>
 											{% if grupo.tutor %}											
 											<td style=" width:20%"><span style="margin-left:20px; ">{{ grupo.tutor.nombres }} {{ grupo.tutor.apellidos }}</span></td>
-{% else %}
-<td style=" width:20%"><span style="margin-left:20px; ">Sin asignar</span></td>
-{% endif %}
-											<td style="width:10%""></td>											
-<td width="5%"></td>
-											<td></td>
-											<td>
+											{% else %}
+											<td style=" width:20%"><span style="margin-left:20px; ">Sin asignar</span></td>
+											{% endif %}
+																			
+											<td style ="width: 290px;">
 												<div>
 													<table class="opciones">
-													<td>
+													<td style ="width: 90px;">
 														<a href="{{ path('usuario_actualizar_grupo', { 'id': grupo.id}) }}">
 														<img src="{{ asset('img/editar.png') }}">
-														<h3> Editar </h3>
+														<h3>Editar</h3>
 														</a>
 													</td>
 													<td style ="width: 90px;">
 														<a href="{{ path('usuario_eliminar_grupo', { 'id': grupo.id}) }}">
 														<img src="{{ asset('img/editar.png') }}">
-														<h3> Eliminar </h3>
+														<h3>Eliminar</h3>
 														</a>
 													</td>	
 													</table> <!-- opciones -->
 												</div>
-												Ver grupo
+												<td><span>{{ grupo.estudiantes.count }}</span></td>	
 											</td>
 										</td> <!-- hoverDir -->
 									</tr><!-- tableitem -->
