--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -22,7 +22,7 @@
 			</a>
 			<a href="{{ path('usuario_profesores') }}" class="menubutton"  id="profesores">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
-				<h3>Profesores</h3>
+				<h3>Tutores</h3>
 			</a>
 			<a href="{{ path('usuario_actividades') }}" class="menubutton"  id="actividades">
 				<img id="externoIcon" src="{{ asset('img/actividad.png') }}">
