change relationships and add subgrupos

--- a/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
+++ b/src/Ingenieria/UsuarioBundle/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
 		<div id="menu">	
 			<a href="{{ path('usuario_adm_homepage') }}" class="menubutton"  id="directores">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
-				<h3>Grupos</h3>
+				<h3>Cursos</h3>
 			</a>
 			<a href="{{ path('usuario_estudiantes') }}" class="menubutton"  id="estudiantes">
 				<img id="externoIcon" src="{{ asset('img/externoIcon.png') }}">
